<resources>
    <string name="app_name">Code Wiz</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="findreplace">FindReplace</string>
    <string name="words_0_characters_0">Words: 0 | Characters: 0</string>
    <string name="app_logo">App Logo</string>
    <string name="name">Text Editor App</string>

    <string-array name="file_operations">
        <item>New File</item>
        <item>Open File</item>
        <item>Save File</item>
    </string-array>
</resources>
